tests/ui/safety-constraint-attribute/double-attribute/expected
error: Cannot derive `Invariant` for `Point`
   |
| #[derive(Invariant)]
   |          ^^^^^^^^^
   |
note: `#[safety_constraint(...)]` cannot be used more than once.
